# Deadlock-Twitch-Bot

./: .gitignore  .gitleaks.toml  INDEX.md  LICENSE  README.md  SECURITY.md  pyproject.toml  rechnung-vorschau.html  recover_session_2800.py  twitch_cog.py
.github/: dependabot.yml  requirements-tools-locked.txt
bot/: __init__.py  app_keys.py  base.py  cog.py  discord_role_sync.py  logging_setup.py  promo_mode.py  readme.md  reload_manager.py  reload_mixin.py  runtime_lock.py  runtime_mode.py  secret_store.py
docs/: ADMIN.md  API.md  ARCHITECTURE.md  DATABASE.md  LURKER_TAX.md  MODULES.md  README.md  SESSION_LIFECYCLE.md  STREAMER.md  admin_user_surface_audit_2026-03-05.md  oauth_scope_reduction_analysis_2026-03-15.md
features/: PROJ-1-partner-raid-score-cache.md  PROJ-2-community-retention-insights-roadmap.md  PROJ-3-chat-raid-confirmation-via-chat-notification.md  PROJ-4-oauth-scope-migration-plan.md
ops/: runbook-split-runtime.md
scripts/: set_stripe_vault.py  setup_stripe_webhook.py  test_checkout.py  update_stripe_prices.py
tests/: sqlite_twitch_schema.py  test_admin_streamers_dedup.py  test_affiliate_api_fixes.py  test_affiliate_commission_processing.py  test_affiliate_gutschriften.py  test_affiliate_pii.py  test_affiliate_portal_assets.py  test_affiliate_stripe_connect.py  test_analytics_regressions.py  test_billing_helpers.py  test_billing_security.py  test_chat_bots.py  test_chat_lurker_tax.py  test_chat_message_blacklist.py  test_chat_promo_override.py  test_chat_raid_command.py  test_chatters_bot_fallback.py  test_dashboard_admin_announcement_mode.py  (+46 more)
(+389 files in other folders)
