[project]
name = "twitch-cog"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "anthropic>=0.40",
    "discord.py>=2.3",
    "keyring>=24",
    "psycopg[binary]>=3.1",
    "stripe>=11",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "twitchio>=2.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["twitch_cog"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*", "twitch_cog*"]
